--- a/Twitter/PhotoCell.xib
+++ b/Twitter/PhotoCell.xib
@@ -6,8 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="296" id="KGk-i7-Jjw" customClass="PhotoCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="233"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="302" id="KGk-i7-Jjw" customClass="PhotoCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="239"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -21,25 +21,25 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmq-X8-dB0">
-                        <rect key="frame" x="76" y="20" width="47" height="24"/>
+                        <rect key="frame" x="76" y="20" width="46.5" height="23.5"/>
                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="247" horizontalCompressionResistancePriority="748" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wD-MS-pD9">
-                        <rect key="frame" x="126" y="22" width="37" height="21"/>
+                        <rect key="frame" x="126" y="22" width="36.5" height="20.5"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
                         <color key="textColor" red="0.79607843140000001" green="0.7725490196" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX2-cy-LuU">
-                        <rect key="frame" x="282" y="23" width="30" height="17"/>
+                        <rect key="frame" x="282" y="23" width="29.5" height="16.5"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqY-ow-Pil">
-                        <rect key="frame" x="76" y="45" width="236" height="21"/>
+                        <rect key="frame" x="76" y="44" width="236" height="20.5"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -52,11 +52,12 @@
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJ0-f0-o0l">
-                        <rect key="frame" x="73" y="212" width="14" height="14"/>
+                        <rect key="frame" x="73" y="212" width="30" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="14" id="dxz-s3-u8l"/>
-                            <constraint firstAttribute="height" constant="14" id="pTh-W8-wUd"/>
+                            <constraint firstAttribute="width" constant="30" id="dxz-s3-u8l"/>
+                            <constraint firstAttribute="height" constant="20" id="pTh-W8-wUd"/>
                         </constraints>
+                        <inset key="contentEdgeInsets" minX="8" minY="3" maxX="8" maxY="3"/>
                         <state key="normal" image="reply">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -65,11 +66,12 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RAb-pV-NKh">
-                        <rect key="frame" x="170" y="212" width="24" height="14"/>
+                        <rect key="frame" x="164" y="212" width="34" height="24"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="14" id="R2W-N7-bCp"/>
-                            <constraint firstAttribute="width" constant="24" id="ThJ-v1-4hS"/>
+                            <constraint firstAttribute="height" constant="24" id="R2W-N7-bCp"/>
+                            <constraint firstAttribute="width" constant="34" id="ThJ-v1-4hS"/>
                         </constraints>
+                        <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                         <state key="normal" image="retweet">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -78,11 +80,12 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MLV-cJ-Kuz">
-                        <rect key="frame" x="267" y="212" width="14" height="14"/>
+                        <rect key="frame" x="259" y="212" width="30" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="14" id="3Zm-3G-j3g"/>
-                            <constraint firstAttribute="height" constant="14" id="irV-mJ-va3"/>
+                            <constraint firstAttribute="width" constant="30" id="3Zm-3G-j3g"/>
+                            <constraint firstAttribute="height" constant="20" id="irV-mJ-va3"/>
                         </constraints>
+                        <inset key="contentEdgeInsets" minX="4" minY="1" maxX="4" maxY="1"/>
                         <state key="normal" image="favorite">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -91,19 +94,19 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSe-wd-O05">
-                        <rect key="frame" x="76" y="3" width="30" height="15"/>
+                        <rect key="frame" x="76" y="3" width="29.5" height="15"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYx-nU-03x">
-                        <rect key="frame" x="195" y="212" width="29" height="14"/>
+                        <rect key="frame" x="198" y="217" width="28.5" height="13.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ox0-js-qBI">
-                        <rect key="frame" x="287" y="212" width="29" height="14"/>
+                        <rect key="frame" x="287" y="217" width="28.5" height="13.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -119,33 +122,33 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="wJ0-f0-o0l" secondAttribute="bottom" constant="6.5" id="1N3-mZ-dqm"/>
                     <constraint firstItem="qmq-X8-dB0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="1jO-pm-sAE"/>
-                    <constraint firstItem="JYx-nU-03x" firstAttribute="leading" secondItem="RAb-pV-NKh" secondAttribute="trailing" constant="1" id="2oK-Kc-CaY"/>
+                    <constraint firstItem="JYx-nU-03x" firstAttribute="leading" secondItem="RAb-pV-NKh" secondAttribute="trailing" id="2oK-Kc-CaY"/>
                     <constraint firstAttribute="trailing" secondItem="AqY-ow-Pil" secondAttribute="trailing" constant="8" id="7J0-RR-CER"/>
-                    <constraint firstItem="RAb-pV-NKh" firstAttribute="centerY" secondItem="JYx-nU-03x" secondAttribute="centerY" id="7Ra-sM-3PG"/>
+                    <constraint firstItem="RAb-pV-NKh" firstAttribute="centerY" secondItem="JYx-nU-03x" secondAttribute="centerY" constant="0.25" id="7Ra-sM-3PG"/>
                     <constraint firstItem="AqY-ow-Pil" firstAttribute="top" secondItem="qmq-X8-dB0" secondAttribute="bottom" constant="1" id="8B2-HP-BSh"/>
                     <constraint firstItem="3wD-MS-pD9" firstAttribute="leading" secondItem="qmq-X8-dB0" secondAttribute="trailing" constant="4" id="B3C-Cx-keM"/>
                     <constraint firstItem="hX2-cy-LuU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="Eyh-2w-x4S"/>
-                    <constraint firstItem="MLV-cJ-Kuz" firstAttribute="leading" secondItem="RAb-pV-NKh" secondAttribute="trailing" constant="73" id="Hmb-Gm-JUx"/>
+                    <constraint firstItem="MLV-cJ-Kuz" firstAttribute="leading" secondItem="RAb-pV-NKh" secondAttribute="trailing" constant="61" id="Hmb-Gm-JUx"/>
                     <constraint firstItem="Rjn-7C-EWW" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="4" id="ITJ-KE-ger"/>
                     <constraint firstItem="qmq-X8-dB0" firstAttribute="centerY" secondItem="3wD-MS-pD9" secondAttribute="centerY" id="IXr-ag-NwB"/>
                     <constraint firstItem="qmq-X8-dB0" firstAttribute="top" secondItem="tKY-mh-8k4" secondAttribute="top" id="JlR-j9-2wf"/>
                     <constraint firstItem="wJ0-f0-o0l" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="5" id="K6G-Fv-wcS"/>
                     <constraint firstItem="tKY-mh-8k4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Kbk-Eg-oRj"/>
                     <constraint firstItem="zz8-Cb-RMJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="Kl2-4D-Dkl"/>
-                    <constraint firstItem="Ox0-js-qBI" firstAttribute="leading" secondItem="MLV-cJ-Kuz" secondAttribute="trailing" constant="6" id="LBp-Bv-vbC"/>
+                    <constraint firstItem="Ox0-js-qBI" firstAttribute="leading" secondItem="MLV-cJ-Kuz" secondAttribute="trailing" constant="-2" id="LBp-Bv-vbC"/>
                     <constraint firstItem="AqY-ow-Pil" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="8" id="PoE-Z6-0PE"/>
                     <constraint firstItem="Rjn-7C-EWW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AqY-ow-Pil" secondAttribute="bottom" constant="6" id="W1D-6z-9f8"/>
                     <constraint firstAttribute="trailing" secondItem="hX2-cy-LuU" secondAttribute="trailing" constant="8" id="XTT-x2-eet"/>
                     <constraint firstItem="OSe-wd-O05" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="76" id="XfL-M9-cyt"/>
                     <constraint firstItem="wJ0-f0-o0l" firstAttribute="top" secondItem="Rjn-7C-EWW" secondAttribute="bottom" constant="11" id="ajq-yp-gvw"/>
-                    <constraint firstItem="RAb-pV-NKh" firstAttribute="centerY" secondItem="wJ0-f0-o0l" secondAttribute="centerY" id="c3X-Dm-E8n"/>
+                    <constraint firstItem="RAb-pV-NKh" firstAttribute="centerY" secondItem="wJ0-f0-o0l" secondAttribute="centerY" constant="2" id="c3X-Dm-E8n"/>
                     <constraint firstItem="qmq-X8-dB0" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="8" id="cgQ-Kr-CiT"/>
                     <constraint firstItem="OSe-wd-O05" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="cuW-MZ-pa1"/>
-                    <constraint firstItem="RAb-pV-NKh" firstAttribute="leading" secondItem="wJ0-f0-o0l" secondAttribute="trailing" constant="83" id="dAO-Mj-XvD"/>
+                    <constraint firstItem="RAb-pV-NKh" firstAttribute="leading" secondItem="wJ0-f0-o0l" secondAttribute="trailing" constant="61" id="dAO-Mj-XvD"/>
                     <constraint firstItem="zz8-Cb-RMJ" firstAttribute="trailing" secondItem="tKY-mh-8k4" secondAttribute="trailing" id="e1i-Bx-Ixi"/>
-                    <constraint firstItem="RAb-pV-NKh" firstAttribute="centerY" secondItem="MLV-cJ-Kuz" secondAttribute="centerY" id="ka2-ve-Tb5"/>
+                    <constraint firstItem="RAb-pV-NKh" firstAttribute="centerY" secondItem="MLV-cJ-Kuz" secondAttribute="centerY" constant="2" id="ka2-ve-Tb5"/>
                     <constraint firstItem="hX2-cy-LuU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="3wD-MS-pD9" secondAttribute="trailing" constant="5" id="mLY-ws-pS9"/>
-                    <constraint firstItem="MLV-cJ-Kuz" firstAttribute="centerY" secondItem="Ox0-js-qBI" secondAttribute="centerY" id="mqA-9A-HrK"/>
+                    <constraint firstItem="MLV-cJ-Kuz" firstAttribute="centerY" secondItem="Ox0-js-qBI" secondAttribute="centerY" constant="-1.75" id="mqA-9A-HrK"/>
                     <constraint firstItem="tKY-mh-8k4" firstAttribute="top" secondItem="OSe-wd-O05" secondAttribute="bottom" constant="2" id="tZP-sX-1dM"/>
                 </constraints>
             </tableViewCellContentView>
@@ -164,7 +167,7 @@
                 <outlet property="tweetLabel" destination="AqY-ow-Pil" id="2iV-Vu-mdS"/>
                 <outlet property="userImageView" destination="tKY-mh-8k4" id="1mi-la-BeE"/>
             </connections>
-            <point key="canvasLocation" x="325" y="336.5"/>
+            <point key="canvasLocation" x="325" y="339.5"/>
         </tableViewCell>
     </objects>
     <resources>
