--- a/Twitter/PhotoCell.xib
+++ b/Twitter/PhotoCell.xib
@@ -44,7 +44,7 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="Rjn-7C-EWW">
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="Rjn-7C-EWW">
                         <rect key="frame" x="72" y="73" width="240" height="128"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="128" id="XXH-JA-vyk"/>
