--- a/Twitter/PhotoCell.xib
+++ b/Twitter/PhotoCell.xib
@@ -14,32 +14,32 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="tKY-mh-8k4">
-                        <rect key="frame" x="8" y="20" width="60" height="60"/>
+                        <rect key="frame" x="8" y="15" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="7GO-eD-i7H"/>
                             <constraint firstAttribute="width" constant="60" id="mim-ta-ZNt"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmq-X8-dB0">
-                        <rect key="frame" x="76" y="20" width="47" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmq-X8-dB0">
+                        <rect key="frame" x="76" y="15" width="47" height="24"/>
                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="247" horizontalCompressionResistancePriority="748" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wD-MS-pD9">
-                        <rect key="frame" x="126" y="22" width="37" height="21"/>
+                        <rect key="frame" x="127" y="17" width="37" height="21"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
                         <color key="textColor" red="0.79607843140000001" green="0.7725490196" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX2-cy-LuU">
-                        <rect key="frame" x="282" y="23" width="30" height="17"/>
+                        <rect key="frame" x="283" y="23" width="30" height="17"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqY-ow-Pil" customClass="TTTAttributedLabel">
-                        <rect key="frame" x="76" y="44" width="236" height="21"/>
+                        <rect key="frame" x="76" y="40" width="236" height="28"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -94,7 +94,7 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSe-wd-O05">
-                        <rect key="frame" x="76" y="3" width="30" height="15"/>
+                        <rect key="frame" x="76" y="3" width="30" height="10"/>
                         <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -112,7 +112,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retweet_on" translatesAutoresizingMaskIntoConstraints="NO" id="zz8-Cb-RMJ">
-                        <rect key="frame" x="50" y="6" width="16" height="12"/>
+                        <rect key="frame" x="50" y="2" width="16" height="12"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="16" id="CQ8-fp-vBg"/>
                             <constraint firstAttribute="height" constant="12" id="R4Y-hv-14T"/>
@@ -121,7 +121,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="wJ0-f0-o0l" secondAttribute="bottom" constant="6.5" id="1N3-mZ-dqm"/>
-                    <constraint firstItem="qmq-X8-dB0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="1jO-pm-sAE"/>
+                    <constraint firstItem="qmq-X8-dB0" firstAttribute="top" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="1jO-pm-sAE"/>
                     <constraint firstItem="JYx-nU-03x" firstAttribute="leading" secondItem="RAb-pV-NKh" secondAttribute="trailing" id="2oK-Kc-CaY"/>
                     <constraint firstAttribute="trailing" secondItem="AqY-ow-Pil" secondAttribute="trailing" constant="8" id="7J0-RR-CER"/>
                     <constraint firstItem="RAb-pV-NKh" firstAttribute="centerY" secondItem="JYx-nU-03x" secondAttribute="centerY" constant="0.25" id="7Ra-sM-3PG"/>
@@ -134,10 +134,10 @@
                     <constraint firstItem="qmq-X8-dB0" firstAttribute="top" secondItem="tKY-mh-8k4" secondAttribute="top" id="JlR-j9-2wf"/>
                     <constraint firstItem="wJ0-f0-o0l" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="5" id="K6G-Fv-wcS"/>
                     <constraint firstItem="tKY-mh-8k4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Kbk-Eg-oRj"/>
-                    <constraint firstItem="zz8-Cb-RMJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="Kl2-4D-Dkl"/>
+                    <constraint firstItem="zz8-Cb-RMJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="Kl2-4D-Dkl"/>
                     <constraint firstItem="Ox0-js-qBI" firstAttribute="leading" secondItem="MLV-cJ-Kuz" secondAttribute="trailing" constant="-2" id="LBp-Bv-vbC"/>
                     <constraint firstItem="AqY-ow-Pil" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="8" id="PoE-Z6-0PE"/>
-                    <constraint firstItem="Rjn-7C-EWW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AqY-ow-Pil" secondAttribute="bottom" constant="6" id="W1D-6z-9f8"/>
+                    <constraint firstItem="Rjn-7C-EWW" firstAttribute="top" secondItem="AqY-ow-Pil" secondAttribute="bottom" constant="6" id="W1D-6z-9f8"/>
                     <constraint firstAttribute="trailing" secondItem="hX2-cy-LuU" secondAttribute="trailing" constant="8" id="XTT-x2-eet"/>
                     <constraint firstItem="OSe-wd-O05" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="76" id="XfL-M9-cyt"/>
                     <constraint firstItem="wJ0-f0-o0l" firstAttribute="top" secondItem="Rjn-7C-EWW" secondAttribute="bottom" constant="11" id="ajq-yp-gvw"/>
