--- a/Twitter/LoginViewController.xib
+++ b/Twitter/LoginViewController.xib
@@ -33,7 +33,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.33333333329999998" green="0.67450980390000004" blue="0.93333333330000001" alpha="0.81000000000000005" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="K3Z-ft-6OY" secondAttribute="centerX" id="ETY-uP-Jh4"/>
                 <constraint firstAttribute="centerY" secondItem="AWZ-08-cmf" secondAttribute="centerY" id="GyZ-E1-J0j"/>
